--- a/SupplementalTables.tex
+++ b/SupplementalTables.tex
@@ -68,7 +68,7 @@
 %
 \setlength{\tabcolsep}{0.2em}
 \begin{sidewaystable}[!ht]
-\begin{picture}(0,0)\put(610,0){\rotatebox{-90}{\parbox{\textwidth}{\section*{Supplemental Table}}}}\end{picture}
+\begin{picture}(0,0)\put(640,0){\rotatebox{-90}{\parbox{\textwidth}{\section*{Supplemental Table}}}}\end{picture}
 	\miniscule
 \begin{longtable}{@{} l l l l l l l @{}}
 \toprule
@@ -137,7 +137,7 @@ Light sheet Imaging & Cultivation in microscope & Cultivation in microscope & Cu
 & Hardware Bin Enabled = True & Hardware Bin Enabled = True & Hardware Bin Enabled = True & Hardware Bin Enabled = True & Hardware Bin Enabled = True & Hardware Bin Enabled = True\\
 & Hardware Bin Factor = 2 & Hardware Bin Factor = 2 & Hardware Bin Factor = 2 & Hardware Bin Factor = 2 & Hardware Bin Factor = 2 & Hardware Bin Factor = 2\\
 & Format & Format & Format & Format & Format & Format\\
-& Pixels = 1372 x 1040 (688 x 520) & Pixels = 1376 x 1040 (688 x 520) & Pixels = 1376 x 1040 (688 x 520) & Pixels = 1376 x 1040 (688 x 520) & Pixels = 1376 x 1040 (688 x 520) & Pixels = 1376 x 1040 (688 x 520)\\
+& Pixels = 1392 $\times$ 1040 (696 $\times$ 520) & Pixels = 1392 $\times$ 1040 (696 $\times$ 520) & Pixels = 1392 $\times$ 1040 (696 $\times$ 520) & Pixels = 1392 $\times$ 1040 (696 $\times$ 520) & Pixels = 1392 $\times$ 1040 (696 $\times$ 520) & Pixels = 1392 $\times$ 1040 (696 $\times$ 520)\\
 & Bits Per Pixel = 14 & Bits Per Pixel = 14 & Bits Per Pixel = 14 & Bits Per Pixel = 14 & Bits Per Pixel = 14 & Bits Per Pixel = 14\\
 & Pixel Pitch = 6.45 $\mu$m & Pixel Pitch = 6.45 $\mu$m & Pixel Pitch = 6.45 $\mu$m & Pixel Pitch = 6.45 $\mu$m & Pixel Pitch = 6.45 $\mu$m & Pixel Pitch = 6.45 $\mu$m\\
 & Gain = 1 & Gain = 1 & Gain = 1 & Gain = 1 & Gain = 1 & Gain = 1\\
