--- a/SupplementalFigures.tex
+++ b/SupplementalFigures.tex
@@ -32,21 +32,21 @@ Related to Figure 1.
 \clearpage
 \captionof{figure}[]{
 Related to Figure 1.
-{\bf Cell lineages of the five wild type datasets and the \emph{aurora} double mutant.} The nodes are colour-coded based on the corresponding division type: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. Labels on the left show the time points and top labels display the total number of divisions. The trees marked by orange rectangles are the ones located in the master cell file of a dataset. The ``bricks'' visualisation at the bottom of each tree allows a comparison of division sequences between different trees. Each column represents the division sequence of a cell until the last segmented time point. The number of columns corresponds to the total number of cells at the last segmented time point, whereas the number of rows indicates the total number of division rounds (e.g. the leftmost leaf cell in the top left tree in dataset \#120830 follows the division sequence anticlinal, anticlinal, periclinal and anticlinal). The visualisation is done in \textit{scifer}.
+{\bf Cell lineages of the five wild type datasets and the \emph{aurora} double mutant.} The nodes are colour-coded based on the corresponding division type: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. Labels on the left show the time points and top labels display the total number of divisions. The trees marked by orange rectangles are the ones located in the master cell file of a dataset. The visualisation at the bottom of each tree allows a comparison of division sequences between different trees. Each column represents the division sequence of a cell until the last segmented time point. The number of columns corresponds to the total number of cells at the last segmented time point, whereas the number of rows indicates the total number of division rounds (e.g. the leftmost leaf cell in the top left tree in dataset \#120830 follows the division sequence anticlinal, anticlinal, periclinal and anticlinal). The visualisation is done in \textit{scifer}.
 }
 \label{fig:S2}
 %
 \clearpage
 %
-\begin{figure}[htbp]
+\begin{sidewaysfigure}
 \centering
 	\begin{overpic}[width=1.\linewidth]{images/S3.pdf}
 	\end{overpic}
-\end{figure}
+\end{sidewaysfigure}
 \clearpage
 \captionof{figure}[]{
-Related to Figure 2.
-{\bf Layer visualisations of the five wild type datasets.} {\bf Top:} On top of each column, all cell nuclei of a dataset are shown in the last time point of segmentation in side and radial views. Each row shows the cell nuclei of an individual cell file (label at top right). Each cell nucleus is coloured according to the sequence of periclinal divisions. {\bf Bottom:} Division sequence trees along the number of cells. Each layer assignment is given by a unique colour. The visualisation is done in \textit{scifer}.
+Related to Figure 2 and Figure 3.
+{\bf Layer visualisations of the five wild type datasets.} {\bf Top:} On top of each column, all cell nuclei of a dataset are shown in the last time point of segmentation in side and radial views. Each row shows the cell nuclei of an individual cell file (label at top right). Each cell nucleus is coloured according to the sequence of periclinal divisions. {\bf Bottom:} Division sequence trees along the number of cells. The visualisation is done in \textit{scifer}.
 }
 \label{fig:S3}
 %
@@ -59,8 +59,8 @@ Related to Figure 2.
 \end{figure}
 \clearpage
 \captionof{figure}[]{
-Related to Figure 3.
-{\bf Reconstruction of five wild type lateral root primordia and analysis of cell file information.} {\bf A:} For each indicated dataset, the spatial distribution of cell nuclei is represented. The first and last time point of segmented nuclei as well as the 143-cell stage are shown in the front, side and radial views. Clonally related cells share the same colour which indicated the cell file assignment. {\bf B:} First time point of the membrane channel in the front view. {\bf C:} Single cell initiation events are restricted to the periphery of the field of founder cells. A sketch of the position of the cell boundaries. Cells in the master cell file are coloured in light and dark green, respectively. The cells in the two flanking cell files are coloured in yellow or orange while the other cell files are illustrated in grey. The red arrowhead indicates founders not belonging to a pair of pericycle cells. {\bf D:} Correlation between the topology of endodermis cells and most contributing founders. The white-magenta dashed line represents the contours of the overlaying endodermis cells. The blue arrowhead indicates the founder contributing most to the primordium. {\bf E:} Pericycle cell border positions relative to the actual centre. {\bf F:} Timing of each division per cell file. For each indicated round of division (sub panels cycle 1$, \ldots$ Cycle 6), each cell division is plotted according to its cell file location and its time of occurrence (since the first division). The dashed box indicates the master cell file and all datasets are considered.
+Related to Figure 4.
+{\bf Reconstruction of five wild type lateral root primordia and analysis of cell file information.} {\bf A:} For each dataset, the spatial distribution of cell nuclei is represented. The first and last time point of segmented nuclei as well as the 143-cell stage are shown in the front, side and radial views. Clonally related cells share the same colour which also indicates the cell file assignment. {\bf B:} First time point of the membrane channel in the front view. {\bf C:} Single cell initiation events are restricted to the periphery of the field of founder cells. A sketch of the position of the cell boundaries. Cells in the master cell file are coloured in light and dark green, respectively. The cells in the two flanking cell files are coloured in yellow or orange while the other cell files are illustrated in grey. The red arrowhead indicates founders not belonging to a pair of pericycle cells. {\bf D:} Correlation between the topology of endodermis cells and most contributing founders. The white-magenta dashed line represents the contours of the overlaying endodermis cells. The blue arrowhead indicates the founder contributing most to the primordium. {\bf E:} Pericycle cell border positions relative to the actual centre. {\bf F:} Timing of each division per cell file and for all five datasets. For each indicated round of division (sub panels cycle 1$, \ldots$, cycle 6), each cell division is plotted according to its cell file location and its time of occurrence (since the first division). The dashed box indicates the master cell file.
 }
 \label{fig:S4}
 %
@@ -73,7 +73,7 @@ Related to Figure 3.
 \end{figure}
 \clearpage
 \captionof{figure}[]{
-Related to Figure 4.
+Related to Figure 5.
 {\bf Division analysis of three wild type datasets.} {\bf Top:} Orientation of divisions in relation to the cell geometry. For each dataset, single sections along indicated cell files (overview upper left) are shown. The sections show several time points (\textbf{A-G}). Cell divisions are assigned into two classes depending on the length of the cell wall relative to the cell dimensions: along the long (blue) axis and along the short (yellow) axis. {\bf Bottom:} Quantitative analysis of classified cell divisions for four division cycles.
 }
 \label{fig:S5}
@@ -87,7 +87,7 @@ Related to Figure 4.
 \end{figure}
 \clearpage
 \captionof{figure}[]{
-Related to Figure 4.
+Related to Figure 5.
 {\bf Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant (dataset \#131203).}
 {\bf A:} The images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pPIN1::PIN1-GFP }is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf B-G:} Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. A single slice of the master cell file in dataset \#131203 at indicated time points is shown. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (\textbf{B-D}) The cell divided without building a cell wall. (\textbf{E-G}) Both daughter cells divided periclinally with cell walls connected in the centre creating two binucleated cells. (\textbf{H}) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$m.
 }
@@ -102,8 +102,8 @@ Related to Figure 4.
 \end{figure}
 \clearpage
 \captionof{figure}[]{
-Related to Figure 5.
-{\bf Alternative visualisations of the model results.} For each model scenario (see Section~\ref{sec:modelScenarios}), the models at the end of the simulation are represented (\textbf{A} is related to Figure 1A, \textbf{B} is related to Figure 5D, \textbf{C} is related to Figure 5G and \textbf{D} is related to Figure 5J). Three types of visualisation are used: cell contours (top), nuclei (middle) and adjacent cell layers (bottom). Colours indicate the layers generated by the sequence of periclinal divisions. The positions of the rendered spheres are given by the centres of mass of each cell. The third representation displays the cell layers between adjacent cells that share the same layer value. Cells are adjacent if they share at least one common cell wall. The lines (cylinders) are drawn for at least two cells through the centres of mass of the corresponding cells. At the bottom of each model, the value of the used area ratio as well as the average number of cells, anticlinal and periclinal divisions are listed.
+Related to Figure 6.
+{\bf Alternative visualisations of the model results.} For each model scenario (see Section~\ref{sec:modelScenarios}), the models at the end of the simulation are represented (\textbf{A} is related to Figure 1A, \textbf{B} is related to Figure 5D, \textbf{C} is related to Figure 5G and \textbf{D} is related to Figure 5J). Three types of visualisation are used: cell contours (top), nuclei (middle) and adjacent cell layers (bottom). Colours indicate the layers generated by the sequence of periclinal divisions. The positions of the rendered spheres are given by the centres of mass of each cell. The third representation displays the cell layers between adjacent cells that share the same layer value. Cells are adjacent if they share at least one common cell wall. The lines (cylinders) are drawn for at least two cells through the centres of mass of the corresponding cells. At the bottom of each model, the value of the used area ratio, i.e. the maximal percentage increase of a cell before it will divide (see Section~\ref{sec:timePointOfDivison}) as well as the average number of cells, anticlinal and periclinal divisions are listed.
 }
 \label{fig:S7}
 %
